DC21-MISC: Fix description word-wrap on long lines with no spaces.

--- a/app/assets/stylesheets/dc21.sass
+++ b/app/assets/stylesheets/dc21.sass
@@ -748,6 +748,9 @@ a.expand_variable, a.expand_facility, a.expand_type, a.expand_package
     text-overflow: ellipsis
     max-width: 600px
 
+.controls .description
+  word-wrap: break-word
+
 #files_input
   label.control-label
     clear: both
